k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-notes
  namespace: code-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-notes
  template:
    metadata:
      labels:
        app: flask-notes
    spec:
      containers:
        - name: flask-notes
          image: ayushjsrtia/code-analyzer-backend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
