k8s/backend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-notes-netpol
  namespace: code-analyzer
spec:
  podSelector:
    matchLabels:
      app: flask-notes
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: notes-frontend
    ports:
    - protocol: TCP
      port: 5000
